trying to debug issue with safari not showing menu

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,7 @@
+.parallax__debug {
+  transform: translate3d(700px, 0, -800px) rotateY(30deg) !important;
+}
+
 .main-page, #header, #parallax, #main-page {
   display: none;
 }
